Fix z-index range slider

--- a/src/components/slider/slider-range/slider-range.module.scss
+++ b/src/components/slider/slider-range/slider-range.module.scss
@@ -42,6 +42,7 @@
 }
 
 .slider-range__input {
+  position: relative;
   display: block;
   width: 100%;
   // min-width: 260px;
@@ -49,7 +50,6 @@
   border: none;
   border-radius: 5px;
   appearance: none;
-  outline: none;
   outline: none;
 
   &::-webkit-slider-runnable-track {
